test/apps/errors/src/routes/async-throw.json.js
export function get(req, res) {
  return Promise.reject(new Error('oops'));
}